/*
  Digital Identity Management

  ## TMF API Reference: TMF720 - Digital Identity Management  ### Version 4.0. - January 2021   Digital Identity Management API goal is to provide the ability to manage a digital identity. This digital identity allows to identify an individual, a resource, or a partyRole (a specific role - or set of roles - for a given individual). A digital identity is associated with credential/authentification method. These credential/authentification methods should be extensible to describe all type of authentification method like login/password, biometric, token, etc.. A contact medium is also associated with digital identity (or directly at credential level) to manage credential recovery UCs.

  The version of the OpenAPI document: 4.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package openapitools;

import public "attachment_ref_or_value.proto";
import public "credential.proto";
import public "digital_identity_contact_medium.proto";
import public "party_ref.proto";
import public "related_party.proto";
import public "resource_ref.proto";
import public "time_period.proto";

message DigitalIdentityCreate {

  // Date and time of the Digital Identity creation (timestamp)
  string creationDate = 511789871;

  // Date and time of the Digital Identity last update (timestamp)
  string lastUpdate = 382267138;

  // Nickname associated to this digital identity (like Juanito17 or the QuebecMoose etc...).
  string nickname = 70690926;

  // List of attachment associated with this digital identity. Could be use to link a cute cat or moose picture to a digital identity for example.
  repeated AttachmentRefOrValue attachment = 352888544;

  // List of contact medium associated with the digital identity.
  repeated DigitalIdentityContactMedium contactMedium = 431425461;

  // A list of credential/authentification method that are used for this digital identity.
  repeated Credential credential = 146544554;

  PartyRef individualIdentified = 19169301;

  // Related Parties who are identified by this digital identity.
  repeated RelatedParty partyRoleIdentified = 408597961;

  // Parties who have an interest in this digital identity (like the organization in charge of providing identity). This is NOT the party identified by this digital identity.
  repeated RelatedParty relatedParty = 139948411;

  ResourceRef resourceIdentified = 442297527;

  TimePeriod validFor = 347557077;

  // When sub-classing, this defines the super-class
  string AtbaseType = 284410115;

  // A URI to a JSON-Schema file that defines additional attributes and relationships
  string AtschemaLocation = 361071498;

  // When sub-classing, this defines the sub-class Extensible name
  string Attype = 360986128;

}
